Improve button looks and make sure big-text alignment is left
old: https://gyazo.com/3c7c2ea62cad590ee7bc01d0e3205623
new:  https://gyazo.com/ea804390be7d4cc4e05ee6766b846762

--- a/ap_calc.css
+++ b/ap_calc.css
@@ -165,6 +165,7 @@ th {
     margin: 0.5em 1em 0.5em 0;
 }
 .big-text {
+    text-align: left;
     font-weight: bold;
     font-size: 1.1em;
     margin: 0.5em 0;
@@ -195,7 +196,7 @@ th {
 .btn {
     text-align: center;
     border: solid 1px #aaaaaa;
-    padding: 4px 8px;
+    padding: 4px 4px;
     position: relative;
     cursor: pointer;
     color: #555555;
